--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 12
+      nodejs: 18
     commands:
       - npm install yarn
       - yarn
@@ -16,4 +16,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: 'build'
+  base-directory: 'dist'
